--- a/playbooks/webapp/webapp.yaml
+++ b/playbooks/webapp/webapp.yaml
@@ -26,6 +26,7 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.deploy_flask_app
       vars:
+        deploy_flask_app_bastion_ssh_private_key: "{{ sshkey_file }}"
         deploy_flask_app_private_subnet_id: "{{ private_subnet.subnet.id }}"
         deploy_flask_app_vpc_id: "{{ vpc.vpc.id }}"
         deploy_flask_app_vm_info: "{{ vm_result }}"
