--- a/changelogs/fragments/20231219-deploy_flask_app-update-arguments-spec.yml
+++ b/changelogs/fragments/20231219-deploy_flask_app-update-arguments-spec.yml
@@ -1,6 +1,5 @@
 ---
 breaking_changes:
   - >-
-    roles/deploy_flask_app - Remove parameter ``deploy_flask_app_sshkey_pair_name`` that was previously required to create
-    ssh connection to the bastion host in favor of the new parameter ``deploy_flask_app_bastion_ssh_private_key`` defining
-    the path to the ssh private key file to use instead (https://github.com/redhat-cop/cloud.aws_ops/issues/103).
+    roles/deploy_flask_app - Add parameter ``deploy_flask_app_bastion_ssh_private_key`` to define
+    the path to the ssh private key file to use to connect to the bastion host (https://github.com/redhat-cop/cloud.aws_ops/issues/103).
