--- a/tests/integration/targets/test_deploy_flask_app/tasks/delete.yaml
+++ b/tests/integration/targets/test_deploy_flask_app/tasks/delete.yaml
@@ -15,52 +15,39 @@
           ansible.builtin.set_fact:
             vpc_id: "{{ vpc.vpcs.0.vpc_id }}"
 
-        - name: Get bastion instance info
+        # Delete EC2 instances
+        - name: Get EC2 instance info
           amazon.aws.ec2_instance_info:
             filters:
-              instance-type: "{{ bastion_host_type }}"
-              key-name: "{{ deploy_flask_app_sshkey_pair_name }}"
               vpc-id: "{{ vpc_id }}"
-          register: bastion
+          register: ec2_instances
 
-        - name: Delete EC2 instances with dependant Resources
-          when: bastion.instances | length == 1
-          block:
-            - name: Set 'instance_host_name' variable
-              ansible.builtin.set_fact:
-                instance_host_name: "{{ bastion.instances.0.public_dns_name | split('.') | first }}"
+        - name: Delete ec2 instances from VPC
+          amazon.aws.ec2_instance:
+            instance_ids: "{{ ec2_instances.instances | map(attribute='instance_id') | list }}"
+            wait: true
+            state: terminated
+          when: ec2_instances.instances | length > 0
 
-            - name: Delete workers key pair
-              amazon.aws.ec2_key:
-                name: "{{ instance_host_name }}-key"
-                state: absent
+        # Delete Load balancer
+        - name: List Load balancer(s) from VPC
+          community.aws.elb_classic_lb_info:
+          register: load_balancers
 
-            - name: Delete load balancer
-              amazon.aws.elb_classic_lb:
-                name: "{{ instance_host_name }}-lb"
-                wait: true
-                state: absent
+        - name: Delete load balancer(s)
+          amazon.aws.elb_classic_lb:
+            name: "{{ item }}"
+            wait: true
+            state: absent
+          with_items: "{{ load_balancers.elbs | selectattr('vpc_id', 'equalto', vpc_id) | map(attribute='load_balancer_name') | list }}"
 
-            - name: List workers
-              amazon.aws.ec2_instance_info:
-                filters:
-                  tag:Name: "{{ instance_host_name }}-workers"
-                  instance-state-name: running
-              register: running
+        # Delete EC2 key pair
+        - name: Delete EC2 key pair
+          amazon.aws.ec2_key:
+            name: "{{ deploy_flask_app_sshkey_pair_name }}"
+            state: absent
 
-            - name: Delete workers
-              amazon.aws.ec2_instance:
-                instance_ids: "{{ running.instances | map(attribute='instance_id') | list }}"
-                wait: true
-                state: terminated
-
-            - name: Delete bastion host
-              amazon.aws.ec2_instance:
-                instance_ids:
-                  - "{{ bastion.instances.0.instance_id }}"
-                wait: true
-                state: terminated
-
+        # Delete RDS information
         - name: Delete RDS instance
           amazon.aws.rds_instance:
             state: absent
@@ -68,29 +55,12 @@
             skip_final_snapshot: true
             wait: true
 
-        - name: Delete key pair to connect to the bastion VM
-          amazon.aws.ec2_key:
-            name: "{{ deploy_flask_app_sshkey_pair_name }}"
-            state: absent
-
         - name: Delete RDS subnet group
           amazon.aws.rds_subnet_group:
             name: "{{ rds_subnet_group_name }}"
             state: absent
 
-        - name: List Security group from VPC
-          amazon.aws.ec2_security_group_info:
-            filters:
-              vpc-id: "{{ vpc_id }}"
-              tag:prefix: "{{ resource_prefix }}"
-          register: secgroups
-
-        - name: Delete security groups
-          amazon.aws.ec2_security_group:
-            state: absent
-            group_id: "{{ item }}"
-          with_items: "{{ secgroups.security_groups | map(attribute='group_id') | list }}"
-
+        # Delete VPC route table
         - name: List routes table from VPC
           amazon.aws.ec2_vpc_route_table_info:
             filters:
@@ -106,6 +76,7 @@
             state: absent
           with_items: "{{ route_table.route_tables | map(attribute='id') | list }}"
 
+        # Delete VPC route table
         - name: Get NAT gateway
           amazon.aws.ec2_vpc_nat_gateway_info:
             filters:
@@ -119,20 +90,40 @@
             wait: true
           with_items: "{{ nat_gw.result | map(attribute='nat_gateway_id') | list }}"
 
+        # Delete Internet gateway
         - name: Delete internet gateway
           amazon.aws.ec2_vpc_igw:
             vpc_id: "{{ vpc_id }}"
             state: absent
+
+        # Delete Subnets
+        - name: List Subnets from VPC
+          amazon.aws.ec2_vpc_subnet_info:
+            filters:
+              vpc-id: "{{ vpc_id }}"
+          register: vpc_subnets
 
         - name: Delete subnets
           amazon.aws.ec2_vpc_subnet:
             cidr: "{{ item }}"
             state: absent
             vpc_id: "{{ vpc_id }}"
-          with_items: "{{ subnet_cidr }}"
+          with_items: "{{ vpc_subnets.subnets | map(attribute='cidr_block') | list }}"
 
-        # As ec2_vpc_route_table can't delete route table, the vpc still has dependencies and cannot be deleted.
-        # You need to do it delete it manually using either the console or the cli.
+        # Delete Security groups
+        - name: List Security group from VPC
+          amazon.aws.ec2_security_group_info:
+            filters:
+              vpc-id: "{{ vpc_id }}"
+          register: secgroups
+
+        - name: Delete security groups
+          amazon.aws.ec2_security_group:
+            state: absent
+            group_id: "{{ item }}"
+          with_items: "{{ secgroups.security_groups | rejectattr('group_name', 'equalto', 'default') | map(attribute='group_id') | list }}"
+
+        # Delete VPC
         - name: Delete VPC
           amazon.aws.ec2_vpc_net:
             name: "{{ vpc_name }}"
