--- a/roles/deploy_flask_app/tasks/main.yaml
+++ b/roles/deploy_flask_app/tasks/main.yaml
@@ -2,12 +2,28 @@
 - name: Deploy flask app.
   module_defaults:
     group/aws: "{{ aws_setup_credentials__output }}"
+  vars:
+    deploy_flask_app__resource_prefix: "{{ deploy_flask_app_vm_info.instances.0.public_dns_name | split('.') | first }}"
+    deploy_flask_app__group_id: "{{ deploy_flask_app_vm_info.instances.0.security_groups[0].group_id }}"
+    deploy_flask_app__vm_image_id: "{{ deploy_flask_app_vm_info.instances.0.image_id }}"
+    deploy_flask_app__bastion_public_ip: "{{ deploy_flask_app_vm_info.instances.0.public_ip_address }}"
+    deploy_flask_app__bastion_private_ip: "{{ deploy_flask_app_vm_info.instances.0.private_ip_address }}"
+    deploy_flask_app__public_subnet_id: "{{ deploy_flask_app_vm_info.instances.0.subnet_id }}"
+    deploy_flask_app__private_subnet_id: "{{ deploy_flask_app_vm_info.instances.0.subnet_id }}"
+    # deploy_flask_app__rds_host: "{{ deploy_flask_app_rds_info.instances.0.endpoint.address }}"
+    # deploy_flask_app__rds_dbname: "{{ deploy_flask_app_rds_info.instances.0.db_name }}"
   block:
-    - name: Create new host in inventory for use in later plays.
-      ansible.builtin.include_tasks: setup.yaml
+    - name: Create infrastructure - workers and load balancer
+      ansible.builtin.include_tasks: setup_infra.yaml
 
-    - name: Deploy resource from Bastion
-      ansible.builtin.include_tasks: bastion_setup.yaml
+    - name: Add bastion host to inventory
+      ansible.builtin.include_tasks: update_inventory.yaml
 
-    - name: Deploy App
-      ansible.builtin.include_tasks: deploy_app.yaml
+    - name: Running from bastion host
+      delegate_to: bastion
+      block:
+        - name: Deploy resource from Bastion
+          ansible.builtin.include_tasks: setup_bastion.yaml
+
+        - name: Deploy App
+          ansible.builtin.include_tasks: deploy_app.yaml
